research/translator-details.txt
>>> from googletrans import Translator, constants
>>> from pprint import pprint
>>> translator = Translator()
>>> translation = translator.translate("Hola Mundo")
>>> print(f"{translation.origin}{translation.src} --> {translation.text} ({translation.dest})")
Hola Mundoes --> Hello World (en)
>>> translation = translator.translate("Hola Mundo", dest="he")
>>> print(f"{translation.origin} ({translation.src}) --> {translation.text ({translation.dest})
  File "<stdin>", line 1
    print(f"{translation.origin} ({translation.src}) --> {translation.text ({translation.dest})
          ^
SyntaxError: unterminated string literal (detected at line 1)
>>> print(f"{translation.origin} ({translation.src}) --> {translation.text ({translation.dest})")
  File "<stdin>", line 1
    print(f"{translation.origin} ({translation.src}) --> {translation.text ({translation.dest})")
                                                                                                ^
SyntaxError: f-string: expecting '}'
>>> print(f"{translation.origin} ({translation.src}) --> {translation.text} ({translation.dest})")
Hola Mundo (es) --> שלום עולם (he)